src/sass/home.component.scss
@import "common";

.home {
  display: flex;
  flex-direction: column;
}

.dm_head {
  @include dm_home_row(#2196f3, #303e5e);

  @include dm_home_link(#BBDEFB);

  .dm_logo{
    text-align: center;
    img{
      width:40%;
      height:auto;
    }
  }
}

devmind-header {
  @include dm_container_closest();
}

.dm_error{
  text-align: center;
  height: 800px;
  a {
    background-color:$color_flash;
    color: white !important;
    @include dm_box__shadow();
    min-width: 64px !important;
    padding: 8px 16px;
    font-size: 14px !important;
    font-weight: 500 !important;
    text-transform: uppercase;
    height: 36px !important;
    display: inline-block;
  }

}
.dm_home_me {
  @include dm_home_row(#2196f3, #303e5e);

  @include dm_home_link(#303e5e);

  .dm_logo{
    text-align: center;
    img{
      width:70%;
      height:70%
    }
  }
  .dm_formation_orga{
    color: #303e5e;
    font-weight: 300;
    @media (max-width: $max_width_mobile) {
      font-size: 9px;
    }
  }
}

.dm_sky {
  @include dm_home_row(#90CAF9, #303e5e);

  @include dm_home_link(#1976D2);
}

.dm_hills {
  @include dm_home_row(#b6db49, #374717);

  .dm_formation__detail{
    padding: 0.5em;
    border: 3px solid #9ab058;
    border-radius: 4px;
  }

  a {
    color: white;
  }
}

.dm_mountain {
  @include dm_home_row(#ddbcee, #303e5e);
  background: linear-gradient(to bottom, #ddbcee 0%,#9e8779 98%);

  @include dm_home_link(#303e5e);

  .bbl {
    text-align: center;
  }

  .dm_formation {
    text-align: center;
    img {
      max-width: 320px;
    }
  }

  .dm_formation_soon {
    color: #303e5e;
  }

  .dm_formation_soon-img {
    opacity: 0.7;
    filter: grayscale(0.7);
  }
}

.dm_formation__detail{
  padding: 0.5em;
  border: 3px solid #ddbcee;
  background-color: #ddbcee;
  border-radius: 4px;
  cursor: hand !important;
  color:#303e5e;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
}

.dm_ground {
  @include dm_home_row(#5f5346, white);
}

#dm_transition_cloud{
  @include  dm_transition(#2196f3, 60px);
  height: 3em;
  background: url('../img/animation/cloud/cloud3.png') top space, url('../img/animation/cloud/cloud2.png') center space;
  background-position: -3em 0em;
}

#dm_transition_mountain{
  @include  dm_transition(#90CAF9, 60px);
  height: 7em;
  background: url('../img/animation/mountain/mountain2.png') top space, url('../img/animation/mountain/mountain1.png') center space;
  background-color:#90CAF9;
  background-position: -3em 2em;
}

#dm_transition_hills{
  @include  dm_transition(#9e8779, 50px);
  height: 4em;
  background: url('../img/animation/hills/hills2.png') bottom space, url('../img/animation/hills/hills1.png') top space;
  background-color:#9e8779;
  background-position: 0 1em;

}

#dm_transition_grass{
  @include  dm_transition(#b6db49, 50px);
  height: 3em;
  background: url('../img/animation/grass/grass1.png') top round;
  background-color:#b6db49;
}


.dm-social {
  min-width: 2em;
  max-width: 2em;
  width: 2em;
  height: 2em;

  &:hover{
    opacity: 0.8;
  }
}
.dm_picture__formation {
  max-width: 600px;
}

